--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
   <div class="app">
     <h1>MTG Deck Simulator</h1>
 
-    <label for="deck-input">Deck List (CSV Format)</label>
-    <textarea id="deck-input" rows="10"></textarea>
+    <label for="deckInput">Deck List (CSV Format)</label>
+    <textarea id="deckInput" rows="10"></textarea>
     <div class="btn-row">
       <button id="paste-deck">📋 Paste from Clipboard</button>
       <button id="import-deck">💾 Save</button>
@@ -39,7 +39,7 @@
     <label>Slow Threshold (turns)</label>
     <input type="number" id="slow-threshold" value="9" min="1" max="10">
 
-    <button id="run-simulation">▶ Run Simulation</button>
+    <button id="runSimBtn">▶ Run Simulation</button>
 
     <div class="results">
       <div id="fast-label"></div>
