--- a/index.html
+++ b/index.html
@@ -14,13 +14,13 @@
     <label for="deckInput">Deck List (CSV Format)</label>
     <textarea id="deckInput" rows="10"></textarea>
     <div class="btn-row">
-      <button id="paste-deck">📋 Paste from Clipboard</button>
-      <button id="import-deck">💾 Save</button>
-      <button id="load-deck">📂 Load</button>
+      <button id="pasteClipboard">📋 Paste from Clipboard</button>
+      <button id="saveDeck">💾 Save</button>
+      <button id="loadDeck">📂 Load</button>
     </div>
 
     <label>Conditions</label>
-    <div id="conditions-container"></div>
+    <div id="conditionsList"></div>
     <button id="add-condition">+ Add Condition</button>
 
     <div class="condition-management">
