--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
       <input type="text" id="condition-name" placeholder="Condition Set Name">
       <button onclick="saveConditionSets()">💾 Save Set</button>
       <button onclick="deleteConditionSets()">🗑️ Delete Set</button>
+      <button onclick="loadConditionSets()">📂 Load Set</button>
     </div>
     <div id="conditionsList" style="overflow-x: auto; max-height: 300px;">
     <!-- Dynamically populated condition sets will go here -->
