--- a/index.html
+++ b/index.html
@@ -13,11 +13,18 @@
 
     <label for="deckInput">Deck List (CSV Format)</label>
     <textarea id="deckInput" rows="10"></textarea>
+    <h2>Deck Management</h2>
+    <label for="deckNameInput">Deck Name:</label>
+    <input type="text" id="deckNameInput" placeholder="My Bello Deck" />
+    <br><br>
+    <label for="deckSelector">Load Deck:</label>
+    <select id="deckSelector"></select>
     <div class="btn-row">
       <button id="pasteClipboard">📋 Paste from Clipboard</button>
-      <button id="saveDeck">💾 Save</button>
-      <button id="loadDeck">📂 Load</button>
+      <button onclick="saveCurrentDeck()">💾 Save Deck</button>
+      <button onclick="loadSelectedDeck()">📂 Load</button>
     </div>
+    
 
     <label>Conditions</label>
     <div id="conditionsContainer"></div>
