--- a/index.html
+++ b/index.html
@@ -32,9 +32,11 @@
 
     <div class="condition-management">
       <input type="text" id="condition-name" placeholder="Condition Set Name">
-      <button onclick="saveConditionSets()">💾 Save Set</button>
-      <button onclick="deleteConditionSets()">🗑️ Delete Set</button>
-      <button onclick="loadConditionSets()">📂 Load Set</button>
+      <div class="btn-row">
+        <button onclick="saveConditionSets()">💾 Save Set</button>
+        <button onclick="deleteConditionSets()">🗑️ Delete Set</button>
+        <button onclick="loadConditionSets()">📂 Load Set</button>
+      </div>
     </div>
     <div id="conditionsList" style="overflow-x: auto; max-height: 300px;">
     <!-- Dynamically populated condition sets will go here -->
