--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <div class="btn-row">
       <button id="pasteClipboard">📋 Paste from Clipboard</button>
       <button onclick="saveCurrentDeck()">💾 Save Deck</button>
-      <button onclick="loadSelectedDeck()">📂 Load</button>
+      <button onclick="loadSelectedDeck()">📂 Load Deck</button>
     </div>
     
 
@@ -32,11 +32,11 @@
 
     <div class="condition-management">
       <input type="text" id="condition-name" placeholder="Condition Set Name">
-      <div class="btn-row">
-        <button onclick="saveConditionSets()">💾 Save Set</button>
-        <button onclick="deleteConditionSets()">🗑️ Delete Set</button>
-        <button onclick="loadConditionSets()">📂 Load Set</button>
-      </div>
+    </div>
+    <div class="btn-row">
+      <button onclick="saveConditionSets()">💾 Save Set</button>
+      <button onclick="deleteConditionSets()">🗑️ Delete Set</button>
+      <button onclick="loadConditionSets()">📂 Load Set</button>
     </div>
     <div id="conditionsList" style="overflow-x: auto; max-height: 300px;">
     <!-- Dynamically populated condition sets will go here -->
