--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
       <button id="pasteClipboard">📋 Paste from Clipboard</button>
       <button onclick="saveCurrentDeck()">💾 Save Deck</button>
       <button onclick="loadSelectedDeck()">📂 Load Deck</button>
+      <button onclick="parseDeck()">⏳ Parse Deck</button>
     </div>
     
 
