--- a/index.html
+++ b/index.html
@@ -16,14 +16,15 @@
     <textarea id="deckInput" rows="10"></textarea>
     <label for="deckNameInput">Deck Name:</label>
     <input type="text" id="deckNameInput" placeholder="My Bello Deck" />
-    <br><br>
+    <div class="btn-row">
+      <button id="pasteClipboard">📋 Paste from Clipboard</button>
+      <button onclick="parseDeck()">⏳ Parse Deck</button>
+    </div>
     <label for="deckSelector">Load Deck:</label>
     <select id="deckSelector"></select>
     <div class="btn-row">
-      <button id="pasteClipboard">📋 Paste from Clipboard</button>
       <button onclick="saveCurrentDeck()">💾 Save Deck</button>
       <button onclick="loadSelectedDeck()">📂 Load Deck</button>
-      <button onclick="parseDeck()">⏳ Parse Deck</button>
     </div>
     
 
