--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <input type="text" id="deckNameInput" placeholder="My Bello Deck" />
     <div class="btn-row">
       <button id="pasteClipboard">📋 Paste from Clipboard</button>
-      <button onclick="parseDeck()">⏳ Parse Deck</button>
+      <button id="parseBtn">⏳ Parse Deck</button>
     </div>
     <label for="deckSelector">Load Deck:</label>
     <select id="deckSelector"></select>
